cluster-resources/ingress/anton-ingress.yaml
# anton-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anton-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - anton.golebiowski.dev
      secretName: letsencrypt-prod-anton-tls-secret
  rules:
    - host: anton.golebiowski.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
